--- a/sabibatbet_profile/templates/sabibatbet_profile/sabibatbet_profile.html
+++ b/sabibatbet_profile/templates/sabibatbet_profile/sabibatbet_profile.html
@@ -8,7 +8,7 @@
 
 {% block css %}
   <script type="text/javascript" src="//platform.linkedin.com/in.js">
-  	api_key:   MENYUSUL
+  	api_key:   816mxerpb74tkq
   	onLoad:    onLinkedInLoadCompany
   	authorize: true
   </script>
