--- a/sabibatbet_profile/templates0/sabibatbet_login/partials/header.html
+++ b/sabibatbet_profile/templates0/sabibatbet_login/partials/header.html
@@ -12,7 +12,7 @@
         <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li><a href="{% url 'sabibatbet-login:index' %}" style="color: white"> Home </a></li>
-            <li><a href="{% url 'sabibatbet-profile:index' %}" style="color: white"> Profile </a></li>
+            <li><a href="{% url 'sabibatbet-login:index' %}" style="color: white"> Profile </a></li>
             <li><a href="{% url 'sabibatbet-login:index' %}" style="color: white"> Lowongan Kerja </a></li>
         </ul>
         </div><!--/.nav-collapse -->
