--- a/sabibatbet_login/templates/sabibatbet_login/home.html
+++ b/sabibatbet_login/templates/sabibatbet_login/home.html
@@ -3,7 +3,13 @@
 <p id="baton"></p>
 <div id="profileData">
 	<h1> Welcome to Our Company SABIBATBET</h1>
-	<p id="name"></p>
+	<script type="in/Login"></script>
+	<div id="profileData">
+		<div id="gambar"></div>
+		<div id="name"></div>
+		<div id="tempat"></div>
+	</div>
+	<div id="logout"></div>
 	<!-- <a href="{% url 'sabibatbet-login:login-mahasiswa' %}" class="btn btn-primary"> Login Perusahaan </a> -->
 	<!-- <button onclick="facebookLogin()">Login with Facebook</button>
 	<h1> halo</h1> -->
@@ -11,6 +17,3 @@
 {% endblock %}
 <!-- sign in with linkedin button -->
 
-{% block javascript %}
-<script type="in/Login"></script>
-{% endblock %}
