--- a/sabibatbet_login/templates/sabibatbet_login/home.html
+++ b/sabibatbet_login/templates/sabibatbet_login/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <p id="baton"></p>
 <div id="profileData">
-	<h1> Welcome to Our Company SABIBATBET</h1>
+	<h1> Welcome</h1>
 	<script type="in/Login"></script>
 	<div id="profileData">
 		<div id="gambar"></div>
@@ -10,9 +10,6 @@
 		<div id="tempat"></div>
 	</div>
 	<div id="logout"></div>
-	<!-- <a href="{% url 'sabibatbet-login:login-mahasiswa' %}" class="btn btn-primary"> Login Perusahaan </a> -->
-	<!-- <button onclick="facebookLogin()">Login with Facebook</button>
-	<h1> halo</h1> -->
 </div>
 {% endblock %}
 <!-- sign in with linkedin button -->
