--- a/sabibatbet_login/templates/sabibatbet_login/home.html
+++ b/sabibatbet_login/templates/sabibatbet_login/home.html
@@ -2,13 +2,11 @@
 {% block content %}
 <p id="baton"></p>
 <div id="profileData">
-	<h1> Welcome</h1>
+	<h1> Welcome to KlingIn</h1>
 	<script type="in/Login"></script>
-	<div id="profileData">
 		<div id="gambar"></div>
 		<div id="name"></div>
-		<div id="tempat"></div>
-	</div>
+		<div id="tempat" style="margin-bottom: 10px;"></div>
 	<div id="logout"></div>
 </div>
 {% endblock %}
