--- a/sabibatbet_forum/templates/forum/layout/base.html
+++ b/sabibatbet_forum/templates/forum/layout/base.html
@@ -10,14 +10,21 @@
     <meta name="author" content="{{author}}">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/lab_6.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/sabibatbet_forum.css' %}" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700">
     <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.4.1.css">
     <link href="https://fonts.googleapis.com/css?family=Orbitron:900" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'static/css/sabibatbet_forum.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/sabibatbet_forum.css' %}" />
     <link rel="shortcut icon" href="https://vignette3.wikia.nocookie.net/campcamp/images/e/e7/LI-favicon.png/revision/latest?cb=20160720055853" type="image/x-icon">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="{% static 'js/sabibatbet_forum.js' %}"></script>
+    <script type="text/javascript" src="//platform.linkedin.com/in.js">
+    api_key:   816mxerpb74tkq
+    onLoad:    onLinkedInLoad
+    authorize: true
+    </script>
     <title>
         {% block title %} SABIBATBET {% endblock %}
     </title>
@@ -38,9 +45,7 @@
     {% endblock %}
   </footer>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
 <script src="https://code.jquery.com/qunit/qunit-2.4.1.js"></script>
-<script src="{% static 'static/js/sabibatbet_forum.js' %}"></script>
 </html>
