--- a/sabibatbet_forum/templates/forum/partials/header.html
+++ b/sabibatbet_forum/templates/forum/partials/header.html
@@ -4,7 +4,7 @@
 			<a class="navbar-brand" href="#">
 				<span class="small-nav"></span>
 				<span class="logo"></span>
-				<span class="full-nav"> Bootsnipp </span>
+				<span class="full-nav"> Keling </span>
 			</a>
 		</div>
 		<div class="">
@@ -19,18 +19,28 @@
 				</li>
 				<li>
 					<a href="#about-us">
-						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="About Us">
+						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Profile">
 							<span class="fa fa-users"></span>
 						</span>
-						<span class="full-nav"> About Us </span>
+						<span class="full-nav"> Profile </span>
 					</a>
 				</li>
 				<li>
 					<a href="#contact-us">
-						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Contact Us">
+						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Forum">
 							<span class="glyphicon glyphicon-comment"></span>
 						</span>
-						<span class="full-nav"> Contact Us </span>
+						<span class="full-nav"> Forum </span>
+					</a>
+				</li>
+				<br>
+				<br>
+				<li>
+					<a href="#logout">
+						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Logout">
+							<span class="glyphicon glyphicon-off"></span>
+						</span>
+						<span class="full-nav"> Logout </span>
 					</a>
 				</li>
 			</ul>
@@ -41,17 +51,3 @@
 	<span class="glyphicon glyphicon-chevron-right nav-open"></span>
 	<span class="glyphicon glyphicon-chevron-left nav-close"></span>
 </button>
-
-<div class="container">
-	<div class="row">
-		<h2>Bootstrap Navigation meets Twitch Navigation</h2>
-        <p>This is just a quick and dirty example I made to show off to a friend. Don't forget to change the theme using the dropdown above.</p>
-	</div>
-    <div class="row">
-        <h2>Navbar Styles</h2>
-        <p>Just to show off how easy it is to theme!</p>
-        <button type="button" class="btn btn-inverse nav-style-toggle disabled" data-type="inverse"> Inverse</button>
-        <button type="button" class="btn btn-default nav-style-toggle" data-type="default"> Default</button>
-        <button type="button" class="btn btn-purple nav-style-toggle" data-type="purple"> Purple</button>
-    </div>
-</div>
