--- a/sabibatbet_forum/templates/forum/partials/footer.html
+++ b/sabibatbet_forum/templates/forum/partials/footer.html
@@ -1,3 +1,5 @@
 <div class="footer">
-  <p>&copy; 2017 ntaps sabeb sabibatbet</p>
+      <div class="container">
+        <p class="text-muted">&copy; 2017 ntaps sabeb sabibatbet.</p>
+      </div>
 </div>
