--- a/sabibatbet_profile/templates/sabibatbet_profile/partials/header.html
+++ b/sabibatbet_profile/templates/sabibatbet_profile/partials/header.html
@@ -8,11 +8,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{% url 'sabibatbet-login:index' %}" style="color: white">SABIBATBET</a>        </div>
+        <a class="navbar-brand" style="color: white">SABIBATBET</a>
+        </div>
         <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li><a href="{% url 'sabibatbet-login:index' %}" style="color: white"> Home </a></li>
-            <li><a href="{% url 'sabibatbet-profile:index' %}" style="color: white"> Profile </a></li>
+            <li><a href="http:\\sabibatbet.herokuapp.com/sabibatbet_profile" style="color: white"> Profile </a></li>
             <li><a href="{% url 'sabibatbet-login:index' %}" style="color: white"> Lowongan Kerja </a></li>
         </ul>
         </div><!--/.nav-collapse -->
