--- a/sabibatbet_profile/templates/sabibatbet_profile/sabibatbet_profile.html
+++ b/sabibatbet_profile/templates/sabibatbet_profile/sabibatbet_profile.html
@@ -3,57 +3,58 @@
 {% load static %}
 
 {% block title %}
-  Profile Perusahaan
+Profile Perusahaan
 {% endblock %}
 
 {% block css %}
-  <script type="text/javascript" src="//platform.linkedin.com/in.js">
-  	api_key:   816mxerpb74tkq
-  	onLoad:    onLinkedInLoadCompany
-  	authorize: true
-  </script>
-  <link rel="stylesheet" type="text/css" href="{% static 'css/sabibatbet_profile.css' %}" />
+<script type="text/javascript" src="//platform.linkedin.com/in.js">
+ api_key:   816mxerpb74tkq
+ onLoad:    checkLoggedIn
+ authorize: true
+</script>
+<link rel="stylesheet" type="text/css" href="{% static 'css/sabibatbet_profile.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/sabibatbet_login.css' %}" />
+{% endblock %}
+
+{% block header %}
+{% include "sabibatbet_profile/partials/header.html" %}
 {% endblock %}
 
 {% block content %}
-  <section style="height: auto;">
-    <header class="masthead">
-      <div class="overlay">
-        <div class="container">
-          <h1 class="display-1 text-white">WELCOME</h1>
-          <h2 class="display-4 text-white" id="companyName">Perusahaan </h2>
-          <br>
-          <a href="#" class="btn btn-primary">Lihat Forum</a>
-          <a href="#" class="btn btn-primary">Cari Mahasiswa</a>
-        </div>
-      </div>
-    </header>
-
-    <div class="container" style="margin-top: 4%;" id="about-company-section">
-      <div class="row">
-        <div class="col-lg-11 col-md-11 col-sm-11 col-11 mx-auto">
-          <h2 id="title-about">About Company:</h2>
-          <div id="about"></div>
-          <br>
-          <div class="row">
-            <div class="col-lg-6 col-md-4 col-sm-4 col-4" id="judul-about">
-              <h5 id="about-company">Tipe Perusahaan</h5>
-              <h5 id="about-company">Web Perusahaan</h5>
-              <h5 id="about-company">Spesialitas</h5>
-            </div>
-            <div class="col-lg-6 col-md-8 col-sm-4 col-8">
-              <h5 id="companyType"></h5>
-              <h5 id="companyWeb"></h5>
-              <!-- : <a href="https://{{companyWeb}}">{{companyWeb}}<a> -->
-              <h5 id="companySpecialty"></h5>
-            </div>
-          </div>
-        </div>
-      </div>
+<section style="height: auto;">
+  <!-- Banner -->
+  <section id="banner">
+    <div class="inner">
+      <header>
+        <h1>Company Dashboard</h1>
+        <p id="companyName">Welcome </p>
+      </header>
+      <a href="#" class="button big" style="background-color: black">Lihat Forum</a>
+      <a href="#" class="button big" style="background-color: black">Cari Mahasiswa</a>
     </div>
   </section>
-{% endblock %}
 
-{% block javascript %}
-<script src="{% static 'js/fitur1.js' %}"></script>
-{% endblock %}
+  <!-- Section -->
+  <section class="wrapper style1">
+    <div class="inner">
+      <!-- 2 Columns -->
+      <h2>About Company</h3>
+      <div class="flex flex-1">
+        <div class="col col1">
+          <p id="about"></p>
+        </div>
+        <div class="col col2">
+          <h5 id="companyType">Company Type: </h5>
+          <p id="companyType"></p>
+          <h5 id="companyWeb">Website: </h5>
+          <h5 id="companySpecialty"><b>Specialities: </h5>
+        </div>
+      </div>
+      <a href="#" class="button">Learn More</a>
+    </div>
+  </section>
+  {% endblock %}
+
+  {% block javascript %}
+  <script src="{% static 'js/sabibatbet_profile.js' %}"></script>
+  {% endblock %}
