--- a/sabibatbet_login/templates/sabibatbet_login/partials/header.html
+++ b/sabibatbet_login/templates/sabibatbet_login/partials/header.html
@@ -1,19 +1,55 @@
-<!-- Fixed navbar -->
-<nav class="navbar navbar-default navbar-static-top" style="background-color: grey">
+<div class="navbar navbar-inverse navbar-twitch" role="navigation">
     <div class="container">
         <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="{% url 'sabibatbet-login:index' %}" style="color: white">KlingIn</a>        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-            <li><a href="{% url 'sabibatbet-login:index' %}" style="color: white"> Home </a></li>
-            <li><a href="{% url 'sabibatbet-login:index' %}" style="color: white"> Profile </a></li>
-            <li><a href="{% url 'sabibatbet-login:index' %}" style="color: white"> Lowongan Kerja </a></li>
+            <a class="navbar-brand" href="#">
+                <span class="small-nav"></span>
+                <span class="logo"></span>
+                <span class="full-nav"> Keling </span>
+            </a>
+        </div>
+        <div class="">
+            <ul class="nav navbar-nav">
+                <li class="active">
+                    <a href="{% url 'sabibatbet-login:index' %}">
+                        <span class="small-nav" data-toggle="tooltip" data-placement="right" title="Home">
+                            <span class="glyphicon glyphicon-home"></span>
+                        </span>
+                        <span class="full-nav"> Home </span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'sabibatbet-profile:index' %}">
+                        <span class="small-nav" data-toggle="tooltip" data-placement="right" title="Profile">
+                            <span class="fa fa-users"></span>
+                        </span>
+                        <span class="full-nav"> Profile </span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'sabibatbet-forum:index' %}">
+                        <span class="small-nav" data-toggle="tooltip" data-placement="right" title="Forum">
+                            <span class="glyphicon glyphicon-comment"></span>
+                        </span>
+                        <span class="full-nav"> Forum </span>
+                    </a>
+                </li>
+                <br>
+                <br>
+                {% if request.session.user_login %}
+                <li>
+                    <a onclick="logout()">
+                        <span class="small-nav" data-toggle="tooltip" data-placement="right" title="Logout">
+                            <span class="glyphicon glyphicon-off"></span>
+                        </span>
+                        <span class="full-nav"> Logout </span>
+                    </a>
+                </li>
+                {% endif %}
+            </ul>
         </div><!--/.nav-collapse -->
     </div>
-</nav>
+</div>
+<button type="button" class="btn btn-default btn-xs navbar-twitch-toggle">
+    <span class="glyphicon glyphicon-chevron-right nav-open"></span>
+    <span class="glyphicon glyphicon-chevron-left nav-close"></span>
+</button>
