--- a/sabibatbet_forum/templates/forum.html
+++ b/sabibatbet_forum/templates/forum.html
@@ -4,25 +4,52 @@
   <div class="col-md-6 col-md-offset-3">
     <div class="rata-tengah">
       <div class="judul">
-        <h1> Forum {{company_id}}</h1>
+        <h1 id="title"> Forum </h1>
       </div>
     </div>
-    {% for post in posts %}
+    <div class="post-list"></div>
+    <!-- {% for post in posts %}
       <p>{{ post.company_id }} - {{ post.content }}</p>
-    {% endfor %}
+    {% endfor %} -->
+    <form action="{% url 'sabibatbet-forum:add-post' %}" method="POST">
+      {% csrf_token %}
+      <textarea name="content"></textarea>
+      <input type="submit" name="Submit" value="Submit">
+    </form>
   </div>
   <script type="text/javascript">
-    $(document).ready(function(){
-      IN.API.Raw("/companies/" + 13600614 + ":(id,name,ticker,description)?format=json")
+    function onLinkedInLoad() {
+        IN.Event.on(IN, "auth", getCompanyProfile);
+    }
+
+    function getCompanyProfile() {
+      IN.API.Raw("/companies/" + {{company_id}} + ":(name)?format=json")
+        .method("GET")
+        .result(function(response){
+          var html = response["name"];
+          $("#title").append(html);
+        })
+        .error(function(response){
+          console.log(response);
+        });
+      var post_string = '{{posts|safe}}';
+      var posts = JSON.parse(post_string);
+      posts.forEach(function(post){
+        IN.API.Raw("/companies/" + post.fields["company_id"] + ":(id,name,square-logo-url)?format=json")
         .method("GET")
         .result(function(response){
           console.log(response);
+          var html = "<div>" + "<img src='" + response["squareLogoUrl"] + "'></img> " + post.fields["content"] + "</div><br>"
+          $(".post-list").append(html);
         })
-        .error(onError);
-    });
+        .error(function(response){
+          console.log(response);
+        });
+      })
+    }
   </script>
 </div>
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <div class="[ col-xs-12 col-sm-offset-1 col-sm-5 ]">
             <div class="[ panel panel-default ] panel-google-plus">
@@ -35,6 +62,13 @@
                   {% for post in posts %}
                     <p>{{ post.content }}</p>
                   {% endfor %}
+                </div>
+                <div>
+                  <form action="{% url 'sabibatbet-forum:add-post' %}" method="POST">
+                    {% csrf_token %}
+                    <textarea name="content"></textarea>
+                    <input type="submit" name="Submit" value="Submit">
+                  </form>
                 </div>
                 <div class="panel-footer">
                     <button type="button" class="[ btn btn-default ]">+1</button>
@@ -55,7 +89,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
 {% endblock %}
