--- a/sabibatbet_forum/templates/forum/layout/base.html
+++ b/sabibatbet_forum/templates/forum/layout/base.html
@@ -30,7 +30,7 @@
 <body>
   <header>
     {% block header %}
-    {% include "forum/partials/header.html" %}
+    {% include "sabibatbet_login/partials/header.html" %}
     {% endblock %}
   </header>
   <content>
