gak kelar cuy wkwk

--- a/sabibatbet_login/templates/sabibatbet_login/layout/base.html
+++ b/sabibatbet_login/templates/sabibatbet_login/layout/base.html
@@ -46,7 +46,7 @@
 <!-- Jquery n Bootstrap Script -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="{% static 'js/sabibatbet_linkedin.js' %}"></script>
+<!-- <script type="text/javascript" src="{% static 'js/sabibatbet_linkedin.js' %}"></script> -->
 {% block javascript %}
 {% endblock %}
 </body>
