--- a/sabibatbet_login/templates/sabibatbet_login/home.html
+++ b/sabibatbet_login/templates/sabibatbet_login/home.html
@@ -10,9 +10,124 @@
       </div>
       <h3> Forum Lowongan Kerja</h2>
     </div>
+    <div class="post-list"></div>
   </div>
 </div>
-<div class="container">
+<script type="text/javascript">
+    // Setup an event listener to make an API call once auth is complete
+    function onLinkedInLoad() {
+        IN.Event.on(IN, "auth", getProfileData);
+    }
+
+    // Use the API call wrapper to request the member's profile data
+    function getProfileData() {
+        IN.API.Profile("me").fields("id", "first-name", "last-name", "headline", "location", "picture-url", "public-profile-url", "email-address").result(displayProfileData).error(onError);
+    }
+
+    function displayProfileData(data){
+        var user = data.values[0];
+        var id = user.id;
+        console.log(id);
+        IN.API.Raw("/companies?format=json&is-company-admin=true")
+        .method("GET")
+        .result(function(response){
+          console.log(response.values[0].id)
+          getCompanyData(response.values[0].id)
+          $.ajax({
+            method : "POST",
+            url : '/sabibatbet_login/add-session/',
+            data : {
+              name: user.firstName+" "+user.lastName,
+              id:id,
+              companyID: response.values[0].id,
+              csrfmiddlewaretoken : '{{ csrf_token }}'
+            },
+            success : showDetailPosts,
+            error : function (error){
+            }
+          });
+        });
+        // $("#gambar").append('<img src="'+user.pictureUrl+'"class="img-circle">');
+        $("#tempat").append('<button class="btn btn-primary">Company Profile </button>'+'<br>');
+        $("#logout").append("<button class='btn btn-danger' onClick='logout()'>Logout</button>");
+        console.log(data);
+        console.log();
+        // $("#name").append(
+        //   '<p>'+'Logged in as '+user.firstName+' '+user.lastName+'</p>'+
+        //   '<button class="btn btn-primary delete">Company Profile</button>');
+        // document.getElementById('profileData').style.display = 'block';
+    }
+
+    function showDetailPosts() {
+      var post_string = '{{posts|safe}}';
+      var posts = JSON.parse(post_string);
+      posts.forEach(function(post){
+        IN.API.Raw("/companies/" + post.fields["company_id"] + ":(id,name,square-logo-url)?format=json")
+        .method("GET")
+        .result(function(response){
+          var html = "<div>" + "<img src='" + response["squareLogoUrl"] + "'></img> " + post.fields["content"] + "</div><div id='" + post["pk"] + "-comment'></div>"
+          $(".post-list").append(html);
+          var tanggapan_string = '{{ tanggapan|safe }}';
+          var tanggapans = JSON.parse(tanggapan_string);
+          tanggapans.forEach(function(tanggapan){
+            if(tanggapan.fields["post_id"] == post["pk"]) {
+                var html_comment = "<div style='padding-left:10px; padding-top:5px'>" + "(" + tanggapan.fields["name"] + ") " + tanggapan.fields["content"] + "</div>";
+                $("#"+post["pk"]+"-comment").append(html_comment)
+            }
+          })
+          html = "<br><div>" +
+                "<form action='/sabibatbet_menanggapi/' method='POST'>" +
+                "{%csrf_token%}" +
+                "<input type='hidden' name='post_id' value='"+
+                post["pk"] +
+                "'>" +
+                "<textarea name='content'></textarea>" +
+                "<input type='submit'>" +
+                "</div><hr>"
+          $("#"+post["pk"]+"-comment").append(html);
+        })
+        .error(function(response){
+          console.log(response);
+        });
+      })
+    }
+
+    // Use the API call wrapper to request the company's profile data
+    function getCompanyData(id) {
+        // Masukin ID company lau
+        var cpnyID = id;
+        localStorage.setItem('companyId', cpnyID);
+        console.log(localStorage.getItem('companyId'));
+        IN.API.Raw("/companies/" + cpnyID + ":(id,name,ticker,description)?format=json")
+          .method("GET")
+          .result(displayCompanyData)
+          .error(onError);
+    }
+
+    function displayCompanyData(data){
+        // To do
+    }
+    // Handle an error response from the API call
+    function onError(error) {
+        console.log(error);
+    }
+
+    // Destroy the session of linkedin
+    function logout(){
+        IN.User.logout(removeProfileData);
+    }
+
+    // Remove profile data from page
+    function removeProfileData(){
+      window.location.assign("/sabibatbet_login/");
+      $.ajax({
+          method: "GET",
+          url: '/sabibatbet_login/remove-session',
+    });
+    }
+
+</script>
+<!-- <div class="container">
     <div class="row">
         <div class="[ col-xs-12 col-sm-offset-0 col-sm-5 ]">
             <div class="[ panel panel-default ] panel-google-plus">
@@ -45,7 +160,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
 {% endblock %}
